// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount /> Matches the snapshot 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 kHAPbE"
  >
    <div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 gRrnjj count"
      >
        11
      </div>
    </div>
  </span>
</div>
`;

exports[`<CartCount /> updates via props 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 kHAPbE"
  >
    <div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 gRrnjj count count-enter-done"
      >
        12
      </div>
    </div>
  </span>
</div>
`;
